# vulkan-triangle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs
shaders/: shader-f.glsl  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: backend.rs  lib.rs  main.cpp  main.rs  pch.hpp  window.rs
src/backend/: debug_messenger.rs  device.rs  instance.rs  physical_device.rs  surface.rs
src/backend/ffi/: vulkan.rs
src/ffi/: vulkan.rs
